@@ -1,6 +1,6 @@
 Package: RcmdrMisc
 Version: 1.0-4
-Date: 2015-12-01
+Date: 2016-04-01
 Title: R Commander Miscellaneous Functions
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
     person("Robert", "Muenchen", role = "ctb"),
